# ornikar-test

./: .gitignore  Makefile  README.md  pyproject.toml
ornikar/src/déploiement/: __init__.py
ornikar/src/déploiement/api/: application_web.py  main.py
ornikar/src/déploiement/api/payloads/: predictions_payload.py
ornikar/src/déploiement/api/schemas/: predictions_schemas.py
ornikar/src/déploiement/domain/: monitoring.py
ornikar/src/déploiement/logger/: logger.py
ornikar/src/déploiement/usecases/quelle_est_la_prediction/: quelle_est_ma_prediction.py  quelle_est_ma_prediction_query.py
ornikar/src/déploiement/usecases/quelles_sont_les_predictions/: quelles_sont_les_predictions.py  quelles_sont_les_predictions_query.py
ornikar/src/entrainement/: __init__.py
ornikar/src/entrainement/cli/: entrainer_un_modele_cli.py
ornikar/src/entrainement/domain/: artefacts_repository_interface.py  donnees_repository_interface.py  metriques.py  model_interface.py  preprocesseur.py  preprocesseur_interface.py
ornikar/src/entrainement/infrastructure/artefacts/: artefact_repository_cloud_implementation.py  artefact_repository_local_implementation.py
ornikar/src/entrainement/infrastructure/model/: automl_model_implementation.py  fake_model_implementation.py
ornikar/src/entrainement/infrastructure/repository/: donnees_repository_cloud_implementation.py  données_repository_fake_implémentation.py  (+1 more)
ornikar/src/entrainement/logger/: logger.py
ornikar/src/entrainement/usecases/: entrainer_un_modele_command.py  entrainer_un_modele_command_handler.py
